--- a/apetito/src/main/resources/application.properties
+++ b/apetito/src/main/resources/application.properties
@@ -1,7 +1,9 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/test
+spring.datasource.url=jdbc:postgresql://localhost:5432/test2
 spring.datasource.username=postgres
 spring.datasource.password=12345
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+spring.jpa.hibernate.ddl-auto=update
 
 server.port=8080
