--- a/apetito/pom.xml
+++ b/apetito/pom.xml
@@ -74,6 +74,13 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>6.2.0.Final</version> <!-- Wybierz odpowiednią wersję -->
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
