--- a/apetito/src/main/resources/application.properties
+++ b/apetito/src/main/resources/application.properties
@@ -1,8 +1,9 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/test2
+spring.datasource.url=jdbc:postgresql://localhost:5432/test5
 spring.datasource.username=postgres
 spring.datasource.password=12345
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+logging.level.org.springframework.security=DEBUG
 
 spring.jpa.hibernate.ddl-auto=update
 
